# rust_rocket_jackmidi_server

./: Cargo.toml  README.md
src/: jackprocess.rs  main.rs  midi_note.rs
