[package]
name = "rust_rocket_jackmidi_server"
version = "0.1.0"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2018"
resolver = "2"

[[bin]]
name = "rocket_example"
path = "src/rocket_example/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = [ "json" ] }
#rocket_contrib = {version = "0.4.0"}
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
reqwest = { version = "0.11", features = ["json"] }
#reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
jack = "0.10.0"
wmidi = "4.0.0"
flume = {version = "0.10.14"}
